# Cuda_CV

CV_P1/: CV_P1.pro  main  main.cpp
CV_test/CV_P1/: CMakeLists.txt  CMakeLists.txt.user.0732d2a  calibrate.cpp  calibrate.h  disaprity.h  disparity.cpp  disparity.h  main  main.cpp  triangulate.cpp  triangulate.h
CV_test/build-CV_P1-Desktop-Debug/: .ninja_deps  .ninja_log  0_left_camera_parameters.yml  0_right_camera_parameters.yml  0_stereo_camera_parameters.yml  1_left_camera_parameters.yml  1_right_camera_parameters.yml  1_stereo_camera_parameters.yml  3_left_camera_parameters.yml  3_right_camera_parameters.yml  3_stereo_camera_parameters.yml  CMakeCache.txt.prev  CV_P1  CV_P1.cbp  Makefile  build.ninja  cmake_install.cmake  left_camera_parameters.yml  right_camera_parameters.yml  stereo_camera_parameters.yml
Calibration_parameters(mono)/: A1_left_camera_parameters.yml  A2_left_camera_parameters.yml  A3_left_camera_parameters.yml  A4_left_camera_parameters.yml  A6_left_camera_parameters.yml  A_left_camera_parameters.yml
Calibration_parameters(stereo)/: A0_stereo_camera_parameters.yml  A1_stereo_camera_parameters.yml  A2_stereo_camera_parameters.yml  A3_stereo_camera_parameters.yml  A4_stereo_camera_parameters.yml  A6_stereo_camera_parameters.yml  A_stereo_camera_parameters.yml
Fotoset/: checkboard_detect.pngZone.Identifier  frames.pngZone.Identifier
Output/: 3d_points.txt
QM_CV/CV_Q/: CV_Q.pro  calibrate.h  main.cpp  three_dimensional_proc.cpp  three_dimensional_proc.h
build-CV_P1-Desktop-Debug/: CMakeCache.txt  CV_P1  CV_P1.cbp  Makefile
(+74 files in other folders)
